Clean up UI, ability to edit, delete and execute plans, split out into separate folders for paths, use bootstrap-select